# arsenic

./: .gitignore  Array.cpp  Arsenic.cpp  ArsenicX.1  Date.cpp  Device.cpp  File.cpp  Firmware.cpp  Folder.cpp  Image3File.cpp  LICENSE  Makefile  Makefile.am  Makefile.in  PList.cpp  README.md  Real.cpp  String.cpp  URL.cpp  ZipFile.cpp  config.h.in  configure.ac  firmware-keys.plist  main.cpp
ArsenicX.xcodeproj/: project.pbxproj
ArsenicX.xcodeproj/xcshareddata/xcschemes/: Arsenic-GNU.xcscheme  ArsenicX.xcscheme
Source/: arsenic.cpp  arsenic.h  bundle.cpp  bundle.h  common.h  main.cpp  memoryfile.cpp  plist.cpp  plist.h
arsenic/core/: common.cpp  common.h
arsenic/io/: dmg.cpp  dmg.h  memoryfile.cpp  memoryfile.h  memoryfile.lo
arsenic/util/: patch.cpp  patch.h  plist.cpp  plist.h
bundles/: map.plist
include/: AbstractFile.h  AbstractFolder.h  Array.h  Arsenic.h  Common.h  Data.h  Date.h  Device.h  Dictionary.h  File.h  Firmware.h  Folder.h  Image3Element.h  MemoryFile.h  Node.h  PList.h  Real.h  RootNode.h  SHA1.h  String.h  URL.h  ZipFile.h  common.h  memoryfile.h  plist.h
include/arsenic/io/: memoryfile.h
io/: memoryfile.cpp
src/: Arsenic.cpp  Common.cpp  Data.cpp  Dictionary.cpp  Firmware.cpp  Image3Element.cpp  Image3File.h  Makefile  Makefile.am  MemoryFile.cpp  PList.cpp  RootNode.cpp  SHA1.cpp  ZipFile.cpp  abstract_file.c  abstract_file.h  abstractfile.cpp  arsenic  arsenic.cpp  arsenic.h  bundle.cpp  bundle.h  common.h  common_xpwn.h  dmg.c  dmg.cpp  dmg.h  dmg_file.c  dmg_filevault.c  dmg_io.c  dmg_lib.c  dmg_partition.c  dmg_resources.c  hfs.c  hfs.cpp  hfs.h  hfs_btree.cpp  hfs_btree.h  hfs_catalog.c  hfs_catalog.h  (+19 more)
src/.deps/: arsenic.Po  bundle.Po  main.Po  memoryfile.Po  plist.Po
src/xpwn_dmg/: dmg_checksum.c  dmg_lib.h  dmg_win32test.c
src/xpwn_hfs/: hfs_btree.c  hfs_extents.c  hfs_fastcompare.c  hfs_flatfile.c  hfs_lib.c  hfs_lib.h  hfs_plus.h  hfs_rawfile.c  hfs_volume.cpp  hfs_xattr.c
util/: plist.cpp
xpwn-hfs/: Makefile.am  configure.ac
xpwn-hfs/include/xpwn-hfs-1.0/: abstractfile.h  dmg.h  dmgfile.h  dmglib.h  filevault.h  hfscompress.h  hfslib.h  hfsplus.h
xpwn-hfs/src/: abstractfile.c  abstractfile.h  base64.c  btree.c  catalog.c  checksum.c  common.h  dmg.h  dmgfile.c  dmgfile.h  dmglib.c  dmglib.h  extents.c  fastunicodecompare.c  filevault.c  filevault.h  flatfile.c  hfscompress.c  hfscompress.h  hfslib.c  hfslib.h  hfsplus.h  io.c  partition.c  rawfile.c  resources.c  udif.c  utility.c  volume.c  xattr.c
