CFLAGS = -O2 -g -Wall -fmessage-length=0 -I../include -I/usr/local/include -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\""
#LDFLAGS =

bin_PROGRAMS = arsenic
arsenic_SOURCES = arsenic.cpp bundle.cpp main.cpp memory_file.cpp plist.cpp sha1.cpp image3_element.cpp image3_file.cpp hfs.c hfs_btree.c hfs_catalog.c hfs_compress.c hfs_extents.c hfs_fastcompare.c hfs_flatfile.c hfs_lib.c hfs_rawfile.c hfs_utility.c hfs_volume.c hfs_xattr.c abstract_file.c
